--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -3048,7 +3048,7 @@ filechooser placessidebar.sidebar list {
   .nautilus-window placessidebar.sidebar list row.sidebar-row,
   filechooser placessidebar.sidebar list row.sidebar-row {
     border: none;
-    color: #ECECEC; }
+    color: #282828; }
     .nautilus-window placessidebar.sidebar list row.sidebar-row.has-open-popup, .nautilus-window placessidebar.sidebar list row.sidebar-row:hover,
     filechooser placessidebar.sidebar list row.sidebar-row.has-open-popup,
     filechooser placessidebar.sidebar list row.sidebar-row:hover {
